# jhue

./: .gitignore  HueBridge.hpp  LICENSE  README.md  jhue_config.example.json  main.cpp
jhue-backend/: app.js  package-lock.json  package.json
jhue-backend/api/: index.js
jhue-backend/api/routes/: lights.js  timed_lights.js  version.js
jhue-backend/models/: timed_light.js
jhue-frontend/: package-lock.json  package.json
jhue-frontend/public/: index.html
jhue-frontend/src/: AddLight.js  App.js  TimedLightList.js
legacy/: CMakeLists.txt  HueBridge.cpp  LightController.cpp  LightController.hpp
legacy/docker/: Dockerfile
